@@ -4,12 +4,14 @@ define( function( require ) {
   'use strict';
 
   // imports
-
+  var H2OIndicatorNode = require( 'PH_SCALE/common/view/graph/H2OIndicatorNode' );
+  var H3OIndicatorNode = require( 'PH_SCALE/common/view/graph/H3OIndicatorNode' );
   var HTMLText = require( 'SCENERY/nodes/HTMLText' );
   var inherit = require( 'PHET_CORE/inherit' );
   var Line = require( 'SCENERY/nodes/Line' );
   var LinearGradient = require( 'SCENERY/util/LinearGradient' );
   var Node = require( 'SCENERY/nodes/Node' );
+  var OHIndicatorNode = require( 'PH_SCALE/common/view/graph/OHIndicatorNode' );
   var PhetFont = require( 'SCENERY_PHET/PhetFont' );
   var PHScaleConstants = require( 'PH_SCALE/common/PHScaleConstants' );
   var Property = require( 'AXON/Property' );
@@ -22,7 +24,17 @@ define( function( require ) {
   var TICK_LENGTH = 10;
   var TICK_X_SPACING = 5;
 
-  function LogConcentrationGraph( solution, scaleHeight ) {
+  /**
+   * @param {Solution} solution
+   * @param {*} options
+   * @constructor
+   */
+  function LogConcentrationGraph( solution, options ) {
+
+    options = _.extend( {
+      scaleHeight: 100,
+      isInteractive: false
+    }, options );
 
     var thisNode = this;
     Node.call( thisNode );
@@ -30,15 +42,16 @@ define( function( require ) {
     // background for the scale, width sized to fit
     var widestTickLabel = createTickLabel( PHScaleConstants.CONCENTRATION_EXPONENT_RANGE.min );
     var scaleWidth = widestTickLabel.width + ( 2 * TICK_X_SPACING ) + ( 2 * TICK_LENGTH );
-    var backgroundNode = new Rectangle( 0, 0, scaleWidth, scaleHeight, SCALE_CORNER_RADIUS, SCALE_CORNER_RADIUS, {
-      fill: new LinearGradient( 0, 0, 0, scaleHeight ).addColorStop( 0, 'rgb(200,200,200)' ).addColorStop( 1, 'white' ),
-      stroke: 'black'
-    });
+    var backgroundNode = new Rectangle( 0, 0, scaleWidth, options.scaleHeight, SCALE_CORNER_RADIUS, SCALE_CORNER_RADIUS, {
+      fill: new LinearGradient( 0, 0, 0, options.scaleHeight ).addColorStop( 0, 'rgb(200,200,200)' ).addColorStop( 1, 'white' ),
+      stroke: 'black',
+      lineWidth: 2
+    } );
     thisNode.addChild( backgroundNode );
 
     // tick marks
     var numberOfTicks = ( PHScaleConstants.CONCENTRATION_EXPONENT_RANGE.getLength() / 2 ) + 1; // every-other exponent
-    var ySpacing = ( scaleHeight - ( 2 * SCALE_Y_MARGIN ) ) / ( numberOfTicks - 1 ); // vertical space between ticks
+    var ySpacing = ( options.scaleHeight - ( 2 * SCALE_Y_MARGIN ) ) / ( numberOfTicks - 1 ); // vertical space between ticks
     var tickLabel, leftLine, rightLine;
     for ( var i = 0; i < numberOfTicks; i++ ) {
       // nodes
@@ -58,15 +71,44 @@ define( function( require ) {
       tickLabel.centerY = leftLine.centerY;
     }
 
-    //XXX this is a test, to be deleted
-    {
-      var H2OIndicatorNode = require( 'PH_SCALE/common/view/graph/H2OIndicatorNode' );
-      var H3OIndicatorNode = require( 'PH_SCALE/common/view/graph/H3OIndicatorNode' );
-      var OHIndicatorNode = require( 'PH_SCALE/common/view/graph/OHIndicatorNode' );
+    // indicators & associated properties
+    var concentrationH2OProperty = new Property( null );
+    var concentrationH3OProperty = new Property( null );
+    var concentrationOHProperty = new Property( null );
+    var h2OIndicatorNode = new H2OIndicatorNode( concentrationH2OProperty, {
+      x: backgroundNode.right - TICK_LENGTH / 2 } );
+    var h3OIndicatorNode = new H3OIndicatorNode( concentrationH3OProperty, {
+      x: backgroundNode.left + TICK_LENGTH / 2,
+      handleVisible: options.isInteractive,
+      shadowVisible: options.isInteractive } );
+    var oHIndicatorNode = new OHIndicatorNode( concentrationOHProperty, {
+      x: backgroundNode.right - TICK_LENGTH / 2,
+      handleVisible: options.isInteractive,
+      shadowVisible: options.isInteractive } );
+    thisNode.addChild( h2OIndicatorNode );
+    thisNode.addChild( h3OIndicatorNode );
+    thisNode.addChild( oHIndicatorNode );
 
-      thisNode.addChild( new H3OIndicatorNode( solution, { x: 5, y: 300, handleVisible: true, shadowVisible: true } ) );
-      thisNode.addChild( new OHIndicatorNode( solution, { x: 75, y: 400, handleVisible: true, shadowVisible: true } ) );
-      thisNode.addChild( new H2OIndicatorNode( solution, { x: 75, y: 60 } ) );
+    //XXX delete this block
+    {
+      h2OIndicatorNode.y = 60;
+      h3OIndicatorNode.y = 300;
+      oHIndicatorNode.y = 400;
+    }
+
+    // Move the indicators and update their values.
+    var update = function() {
+      concentrationH2OProperty.set( solution.getConcentrationH2O() );
+      concentrationH3OProperty.set( solution.getConcentrationH3O() );
+      concentrationOHProperty.set( solution.getConcentrationOH() );
+      //TODO move indicators
+    };
+    //TODO which other properties should be linked?
+    solution.pHProperty.link( update.bind( thisNode ) );
+
+    if ( options.isInteractive ) {
+      //TODO add interactivity for H3O and OH indicators
+      //TODO before dragging indicators, assert && assert( solution.soluteProperty.get() === Solute.CUSTOM )
     }
   }
 
