@@ -64,7 +64,13 @@ define( function( require ) {
       size: new Dimension2( 50, 25 ) } );
 
     var scaleHeight = GRAPH_SIZE.height - unitsSwitch.height - zoomParent.height - scaleSwitch.height - ( 3 * Y_SPACING );
-    var concentrationGraph = new LogConcentrationGraph( solution, scaleHeight );
+    var concentrationGraph = new LogConcentrationGraph( solution, {
+      scaleHeight: scaleHeight,
+      isInteractive: true
+    } );
+
+    //TODO add quantityGraph
+    var quantityGraph = new Rectangle( 0, 0, 75, scaleHeight, 20, 20, { stroke: 'black', lineWidth: 2 } );
 
     // rendering order
     thisNode.addChild( guideNode );
@@ -72,17 +78,25 @@ define( function( require ) {
     thisNode.addChild( zoomParent );
     thisNode.addChild( scaleSwitch );
     thisNode.addChild( concentrationGraph );
+    thisNode.addChild( quantityGraph );
 
     // layout
     unitsSwitch.centerX = guideNode.centerX;
     unitsSwitch.top = guideNode.top;
     concentrationGraph.centerX = guideNode.centerX;
     concentrationGraph.top = unitsSwitch.bottom + Y_SPACING;
+    quantityGraph.centerX = concentrationGraph.centerX;
+    quantityGraph.top = concentrationGraph.top;
     zoomParent.centerX = guideNode.centerX;
     zoomParent.top = concentrationGraph.bottom + Y_SPACING;
     scaleSwitch.centerX = guideNode.centerX;
     scaleSwitch.bottom = guideNode.bottom;
 
+    // toggle visibility of graphs depending on which units are selected
+    graphUnitsProperty.link( function( graphUnits ) {
+      concentrationGraph.visible = ( graphUnits === GraphUnits.MOLES_PER_LITER );
+      quantityGraph.visible = ( graphUnits === GraphUnits.MOLES );
+    } );
   }
 
   return inherit( Node, CustomGraphNode );
