@@ -1,3 +1,5 @@
+1/3/14 add placeholder for quantity graph, wire up to AB switch
+1/3/14 wire up graph indicator values to solution
 1/3/14 make graph indicators non-interactive by default (no handle, no shadow)
 1/3/14 optional handle on graph indicators
 1/2/14 move graph components to common/view/graph/
